--- a/styles/base/_fonts.scss
+++ b/styles/base/_fonts.scss
@@ -11,7 +11,7 @@
 
 @font-face {
   font-family: 'MyFont';
-  src: url(var(--font-primary)) format('woff2');
+  //src: url(var(--font-primary)) format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
