--- a/styles/base/_index.scss
+++ b/styles/base/_index.scss
@@ -1,5 +1,7 @@
 @forward "normalize";
 @forward "reset";
+@forward "custom-properties";
 @forward "fonts";
-@forward "globals";
+@forward "base";
 @forward "typography";
+@forward "helpers";
