--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,13 @@
 /* Error: Undefined mixin.
  *    ,
- * 14 | /   @include mobile {
- * 15 | |     display: none !important;
- * 16 | \   }
+ * 33 | /     @include hover {
+ * 34 | |       background-color: var(--color-primary-dark);
+ * 35 | |       transform: translateY(-1px);
+ * 36 | \     }
  *    '
- *   base\_helpers.scss 14:3  @forward
- *   base\_index.scss 6:1     @use
- *   main.scss 2:1            root stylesheet */
+ *   components\_button.scss 33:5  @forward
+ *   components\_index.scss 1:1    @use
+ *   main.scss 3:1                 root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -16,5 +17,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined mixin.\a    \2577 \a 14 \2502  \250c    @include mobile {\a 15 \2502  \2502      display: none !important;\a 16 \2502  \2514    }\a    \2575 \a   base\\_helpers.scss 14:3  @forward\a   base\\_index.scss 6:1     @use\a   main.scss 2:1            root stylesheet";
+  content: "Error: Undefined mixin.\a    \2577 \a 33 \2502  \250c      @include hover {\a 34 \2502  \2502        background-color: var(--color-primary-dark);\a 35 \2502  \2502        transform: translateY(-1px);\a 36 \2502  \2514      }\a    \2575 \a   components\\_button.scss 33:5  @forward\a   components\\_index.scss 1:1    @use\a   main.scss 3:1                 root stylesheet";
 }
