--- a/styles/base/_custom-properties.scss
+++ b/styles/base/_custom-properties.scss
@@ -2,6 +2,10 @@
   // TYPOGRAPHY
   --font-primary: 'Montserrat', sans-serif;
 
+  // Container size
+  --container-width: 1400px;
+  --container-padding-x: 20px;
+
   // Viewport units fix
   --100vw: 100vw;
   --100vh: 100vh;
