--- a/styles/main.css
+++ b/styles/main.css
@@ -184,6 +184,8 @@ svg * {
 }
 :root {
   --font-primary: "Montserrat", sans-serif;
+  --container-width: 1400px;
+  --container-padding-x: 20px;
   --100vw: 100vw;
   --100vh: 100vh;
 }
@@ -198,6 +200,19 @@ svg * {
   max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
   margin-inline: auto;
   padding-inline: var(--container-padding-x);
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .btn {
